tests/vpol/pod-security-vpol/baseline/disallow-privileged-containers/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: disallow-privileged-containers
policies:
- ../policy.yaml
resources:
- resource.yaml
results:
- isValidatingPolicy: true
  kind: CronJob
  policy: disallow-privileged-containers
  resources:
  - badcronjob01
  - badcronjob02
  - badcronjob03
  - badcronjob04
  - badcronjob05
  result: fail
- isValidatingPolicy: true
  kind: Deployment
  policy: disallow-privileged-containers
  resources:
  - baddeployment01
  - baddeployment02
  - baddeployment03
  - baddeployment04
  - baddeployment05
  result: fail
- isValidatingPolicy: true
  kind: Pod
  policy: disallow-privileged-containers
  resources:
  - badpod01
  - badpod02
  - badpod03
  - badpod04
  - badpod05
  result: fail
- isValidatingPolicy: true
  kind: CronJob
  policy: disallow-privileged-containers
  resources:
  - goodcronjob01
  - goodcronjob02
  - goodcronjob03
  - goodcronjob04
  - goodcronjob05
  - goodcronjob06
  result: pass
- isValidatingPolicy: true
  kind: Deployment
  policy: disallow-privileged-containers
  resources:
  - gooddeployment01
  - gooddeployment02
  - gooddeployment03
  - gooddeployment04
  - gooddeployment05
  - gooddeployment06
  result: pass
- isValidatingPolicy: true
  kind: Pod
  policy: disallow-privileged-containers
  resources:
  - goodpod01
  - goodpod02
  - goodpod03
  - goodpod04
  - goodpod05
  - goodpod06
  result: pass
